# VxMath

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: VxMathConfig.cmake.in
include/: CKDirectoryParser.h  CKPathSplitter.h  FixedSizeAllocator.h  Vx2dVector.h  VxAtomic.h  VxBbox.h  VxBbox.inl  VxColor.h  VxConfiguration.h  VxDefines.h  VxDistance.h  VxFrustum.h  VxFrustum.inl  VxImageDescEx.h  VxIntersect.h  VxMath.h  VxMathCompiler.h  VxMathDefines.h  VxMatrix.h  VxMatrix.inl  VxMemory.h  VxMemoryMappedFile.h  VxMemoryPool.h  VxMutex.h  VxOBB.h  VxPlane.h  VxPlane.inl  VxQuaternion.h  VxQuaternion.inl  VxRay.h  VxRay.inl  VxRect.h  VxRect.inl  VxSIMD.h  VxSIMD.inl  VxSIMDMode.h  VxSharedLibrary.h  VxSphere.h  VxThread.h  VxTimeProfiler.h  (+17 more)
src/: CKDirectoryParser.cpp  CKPathSplitter.cpp  CMakeLists.txt  EscapeURL.cpp  NeuQuant.cpp  NeuQuant.h  Version.rc.in  VxAtomicOpsInternal.h  VxBbox.cpp  VxBlitDispatchBridge.cpp  VxBlitDispatchBridge.h  VxBlitEngine.cpp  VxBlitEngine.h  VxBlitEngineAVX2.cpp  VxBlitEngineClass.cpp  VxBlitEngineSSE2.cpp  VxBlitEngineSSSE3.cpp  VxBlitInternal.h  VxBlitKernels.cpp  VxColor.cpp  VxConfiguration.cpp  VxDistance.cpp  VxEigenMatrix.h  VxFrustum.cpp  VxGraphicUtils.cpp  VxInterpolation.cpp  VxIntersectDispatchStateInternal.h  VxIntersect_BoxBox.cpp  VxIntersect_FaceFace.cpp  VxIntersect_Frustum.cpp  VxIntersect_Plane.cpp  VxIntersect_Sphere.cpp  VxMath.cpp  VxMatrix.cpp  VxMemory.cpp  VxMemoryMappedFilePosix.cpp  VxMemoryMappedFileSDL3.cpp  VxMemoryMappedFileWin32.cpp  VxMemoryPool.cpp  VxMutex.cpp  (+29 more)
tests/: CMakeLists.txt
tests/VxMath/: ArrayTest.cpp  BlitEngineAlphaTest.cpp  BlitEngineContractTest.cpp  BlitEngineEdgeCaseTest.cpp  BlitEngineFormatConversionTest.cpp  BlitEngineMatrixTest.cpp  BlitEnginePalettedTest.cpp  BlitEnginePixelFormatTest.cpp  BlitEngineQuantizeTest.cpp  BlitEngineResizeTest.cpp  BlitEngineSIMDBackendDiffTest.cpp  BlitEngineSIMDOverrideTest.cpp  BlitEngineTestHelpers.h  BlitEngineUpsideDownTest.cpp  BlitSIMDBackendTestMain.cpp  CMakeLists.txt  ConfigurationTest.cpp  DistanceTest.cpp  FixedSizeAllocatorTest.cpp  FrustumTest.cpp  GeometryTest.cpp  HashTableTest.cpp  ImageTest.cpp  IntersectionTest.cpp  ListTest.cpp  MatrixTest.cpp  MemoryMappedFileTest.cpp  PathParsingTest.cpp  PlaneTest.cpp  PlatformCompatibilityTest.cpp  PropertyTests.cpp  QuaternionTest.cpp  RayTest.cpp  RectTest.cpp  SIMDDispatchTest.cpp  SIMDFeatureTest.cpp  SIMDMatrixTest.cpp  SIMDQuaternionTest.cpp  SIMDTestCommon.h  SIMDUtilityTest.cpp  (+14 more)
